Not longer missing a chunk of naval localisation

--- a/localisation/KR_Equip_naval_l_english.yml
+++ b/localisation/KR_Equip_naval_l_english.yml
@@ -1,6 +1,73 @@
 ﻿l_english:
 
-### General ###
+### Vanilla General ###
+
+naval_equipment:0 "Ships"
+submarine_1:0 "Submarine I"
+submarine_2:0 "Submarine II"
+submarine_3:0 "Submarine III"
+submarine_4:0 "Submarine IV"
+submarine_1_desc:0 "Submarines are stealthy vessels designed to take out undefended convoys. The early models from the Great War pave the way for new methods of naval warfare."
+submarine_2_desc:0 "Better armed and more stable, new submarine designs are made to take advantage of advancements in naval tactics and have longer range, being able to attack distant convoy routes."
+submarine_3_desc:0 "The role of the submarine in the fleet outside of convoy attacks is still under debate. Achieving a balance between combination of speed, range and weaponry will be key to the necessary model."
+submarine_4_desc:0 "Increased test depth and efficient layouts will be features of the modern submarines, taking advantage of field experience to select appropriate armaments and engines."
+destroyer_1:0 "Destroyer I"
+destroyer_2:0 "Destroyer II"
+destroyer_3:0 "Destroyer III"
+destroyer_4:0 "Destroyer IV"
+destroyer_1_desc:0 "To ensure the safety of convoys, the destroyers of the Great War must be repurposed and developed. Arming vessels with more torpedoes will allow more opportunities to engage."
+destroyer_2_desc:0 "Longer torpedo range and faster reload speeds, along with new types of armaments such as anti-air turrets, will allow our destroyers to remain efficient and versatile."
+destroyer_3_desc:0 "To better face threats from above and below, new destroyers must be outfitted with radar and modern anti-air and anti-submarine weaponry."
+destroyer_4_desc:0 "The modern destroyer must be fitted with a variety of different detection technologies, new depth charge deployment systems and be built at a larger scale than their predecessors."
+light_cruiser_1:0 "Light Cruiser I"
+light_cruiser_2:0 "Light Cruiser II"
+light_cruiser_3:0 "Light Cruiser III"
+light_cruiser_4:0 "Light Cruiser IV"
+light_cruiser_1_desc:0 "Manoeuvrable light cruisers that can maintain a high speed will continue to be useful for scouting missions."
+light_cruiser_2_desc:0 "Post-war treaties put restrictions on cruisers, but well-armed light vessels can be developed while remaining within these limits."
+light_cruiser_3_desc:0 "Now skirting the limits of treaties, larger and more heavily armoured cruisers can be built, still with light enough weaponry to be classified as light cruisers."
+light_cruiser_4_desc:0 "Tactically employed to protect larger ships, the modern generation of light cruisers can shake off most past restrictions and be better armed to handle aerial attacks."
+heavy_cruiser_1:0 "Heavy Cruiser I"
+heavy_cruiser_2:0 "Heavy Cruiser II"
+heavy_cruiser_3:0 "Heavy Cruiser III"
+heavy_cruiser_4:0 "Heavy Cruiser IV"
+heavy_cruiser_1_desc:0 "The Washington Naval Treaty was set up to prevent an arms race in cruisers, among other ships, but this seems inevitable. By keeping armour light, the weapons load can be increased."
+heavy_cruiser_2_desc:0 "Despite new efforts at treaties, refitting lighter cruisers with heavier weaponry remains efficient, although armour is still limited."
+heavy_cruiser_3_desc:0 "As restrictions are increasingly ignored worldwide, more balanced heavy cruiser designs with more priority on armour can be built. Better anti-air guns allow these ships to cooperate in naval air warfare."
+heavy_cruiser_4_desc:0 "Upscaled, longer and heavier designs with rapid-fire armaments are features in these final stages of heavy cruiser development."
+battle_cruiser_1:0 "Battlecruiser I"
+battle_cruiser_2:0 "Battlecruiser II"
+battle_cruiser_3:0 "Battlecruiser III"
+battle_cruiser_4:0 "Battlecruiser IV"
+battle_cruiser_1_desc:0 "The post-war battlecruiser arms race resulted in several heavily armed designs, sacrificing armour for speed compared to battleships."
+battle_cruiser_2_desc:0 "Rebuilt and repurposed battlecruisers continue to outrun even modern battleship designs by lighter protection, but have developed better systems for fire control, detection and aerial defences."
+battleship_1:0 "Battleship I"
+battleship_2:0 "Battleship II"
+battleship_3:0 "Battleship III"
+battleship_4:0 "Battleship IV"
+battleship_5:0 "Battleship V"
+battleship_6:0 "Battleship VI"
+battleship_1_desc:0 "Considered by some to be a relic of a bygone era of naval warfare, by others as the most impressive ships ever built, no one can deny that these remnants of the battleship arms race constitute some of the most heavily armed and armoured vessels ever built."
+battleship_2_desc:0 "With improved stability and range, a new generation of battleships improve upon previous designs while remaining within limits stipulated by naval treaties."
+battleship_3_desc:0 "Thicker armour, stronger engines, a battery of high-calibre guns and improved anti-air capabilities can allow battleships to remain relevant, if correctly employed, in a world where naval warfare is increasingly dominated by aerial support."
+battleship_4_desc:0 "As the world sees what may be the last major battleship confrontations, the importance of heavy armaments and anti-air turrets is greater than ever."
+carrier_1:0 "Carrier I"
+carrier_2:0 "Carrier II"
+carrier_3:0 "Carrier III"
+carrier_4:0 "Carrier IV"
+carrier_5:0 "Carrier V"
+carrier_6:0 "Carrier VI"
+carrier_1_desc:0 "Many military theorists believe that naval aviation is the future. Converting old capital ships and ocean liners to carry aircraft will be the first step towards utilising these new doctrines."
+carrier_2_desc:0 "As work begins on the first keel-up carrier designs, we must ensure that these ships have the range and speed to keep up with the rest of our navy, while respecting the post-war naval treaties."
+carrier_3_desc:0 "Improved construction methods and more specialised systems like deck edge elevators allow these carriers to transport more planes more efficiently."
+carrier_4_desc:0 "With many naval treaties now increasingly ignored, we can proceed to build carriers capable of transporting more planes than ever to secure air superiority cover."
+SH_battleship_1:0 "Super-Heavy Battleship I"
+SH_battleship_2:0 "Super-Heavy Battleship II"
+SH_battleship_1_desc:0 "The current state of the world no longer has any room for abiding by naval treaties. Without these limitations, we can focus entirely on creating the heaviest, most well-armed battleships of all time, able to engage multiple lesser vessels."
+SH_battleship_2_desc:0 "An improvement on our earlier super heavy design with stronger weapons and improved fire control systems."
+
+### KR 4 General ###
+
 submarine_pre:0 "Pre-Weltkrieg U-boat"
 submarine_pre_desc:0 "The first U-boats opened a new horizon for naval warfare. These new vessels can break through enemy waters without being detected and wreak havoc on the convoy routes."
 destroyer_pre:0 "Pre-Weltkrieg Destroyer"
@@ -17,6 +84,7 @@ carrier_pre:0 "Pre-Weltkrieg Carrier"
 carrier_pre_desc:0 "These Escort Carriers and Seaplane Tenders were the predecessors of today’s aircraft carriers."
 
 ### Japan ###
+
 JAP_submarine_pre:1 "Kaichu Class"
 JAP_submarine_pre_desc:1 "The Kaichu class U-boats were built after WWI and based on the earlier U-boats. These medium-sized U-boats were adequately armed, possesses good operational range and had good speed for their time, but by 1938 they were somewhat outdated. Altogether 42 Kaichu type U-boats were built for the IJN and the series included 7 variants."
 JAP_submarine_1:1 "Kaidai III Class"
@@ -59,11 +127,11 @@ RUS_light_cruiser_4:0 "Slava Class"
 RUS_light_cruiser_4_desc:0 "The Slava-class cruisers are the most numerous cruisers of the Russian Navy and are improved versions of the preceding Kazarsky class. Compared to the Kazarsky's, they have the same armament, machinery and armour, but have an increased fuel capacity allowing for a bigger range, improved U-boat protection, an increased anti-aircraft battery, and a slightly better manoeuvrability. They are designed for the roles of convoy hunting and capital ship escorts."
 
 RUS_heavy_cruiser_1:0 "Yaroslav Class"
-RUS_heavy_cruiser_1_desc:0 "The Yaroslav-class cruisers are the half-sisters of the Svetlana-class and the first heavy cruisers of Russian Navy. Yaroslav was completed with a modified design that included larger-caliber 180mm guns and stronger AA armament. Because it is a rebuilt light cruiser, it's armour is thinner compared to the heavy cruisers of other navies."
+RUS_heavy_cruiser_1_desc:0 "The Yaroslav-class cruisers are the half-sisters of the Svetlana-class and the first heavy cruisers of Russian Navy. Yaroslav was completed with a modified design that included larger-calibre 180mm guns and stronger AA armament. Because it is a rebuilt light cruiser, it's armour is thinner compared to the heavy cruisers of other navies."
 RUS_heavy_cruiser_2:0 "Oleg Class"
 RUS_heavy_cruiser_2_desc:0 "The Oleg-class cruisers are the Russian Navy's first modern heavy cruisers. The design is based on the cancelled Interbellum Russian cruiser projects and is built as part of the 1937-1943 shipbuilding program. The ships are displaced between 7,700 and 9,200 tons. They are armed with new 180mm guns in 3 triple turrets and a solid AA battery. Their strong engines provide good speed and an acceptable operational range, while the armour belt is thin compared to other heavy cruisers."
 RUS_heavy_cruiser_3:0 "Alexandr Nevskyi Class"
-RUS_heavy_cruiser_3_desc:0 "The Alexandr Nevskyi-class heavy cruisers were designed in the late 1930's-early 1940's to counter similar vessels in neighboring countries. The design called for a larger-sized vessel displacing between 15,500 and 17,000 tons. They are equipped with four triple 240mm cannons to fight off enemy cruisers, a heavy AA armament for self-defense, and a larger scout plane force to find the enemy. Their main tasks are scouting for enemy forces and convoy hunting."
+RUS_heavy_cruiser_3_desc:0 "The Alexandr Nevskyi-class heavy cruisers were designed in the late 1930's-early 1940's to counter similar vessels in neighbouring countries. The design called for a larger-sized vessel displacing between 15,500 and 17,000 tons. They are equipped with four triple 240mm cannons to fight off enemy cruisers, a heavy AA armament for self-defence, and a larger scout plane force to find the enemy. Their main tasks are scouting for enemy forces and convoy hunting."
 RUS_heavy_cruiser_4:0 "Dmytryi Donskoi Class"
 RUS_heavy_cruiser_4_desc:0 "The Dmytryi Donskoy-class heavy cruisers are the development of the previous Alexandr Nevskyi class. Design studies started in 1943 and the final version emerged in 1945. The vessels feature 220mm cannons in 3 triple turrets and a strong AA armament. Displacement is at least 26,500 tons."
 
@@ -84,7 +152,7 @@ RUS_battleship_4_desc:0 "The Moskva-class battleships are intended to provide th
 RUS_SH_battleship_1:0 "Vladimir Monomakh"
 RUS_SH_battleship_1_desc:0 "The Vladimir Monomakh-class is authorised in the 1937-43 shipbuilding program for the rebuilding Russian Navy. The ships are planned with a standard displacement of 59,000 tons, three triple turrets carrying 406mm cannons, and a heavy secondary and AA armament. They also have strong engines to accommodate their very thick belt armour."
 RUS_SH_battleship_2:0 "Ivan Groznyi"
-RUS_SH_battleship_2_desc:0 "The Ivan Groznyi-class battleships are a modified and improved version of the previous Vladimir Monomakh-class. Compared to their predecessors, they carry four triple turrets of the same 406mm caliber cannons, thickened belt armour, a revised layout of secondary guns, and stronger AA armament to counter the increased threat from the carrier-based planes."
+RUS_SH_battleship_2_desc:0 "The Ivan Groznyi-class battleships are a modified and improved version of the previous Vladimir Monomakh-class. Compared to their predecessors, they carry four triple turrets of the same 406mm calibre cannons, thickened belt armour, a revised layout of secondary guns, and stronger AA armament to counter the increased threat from the carrier-based planes."
 
 RUS_carrier_1:0 "Borodino Class"
 RUS_carrier_1_desc:0 "The Borodino-class aircraft carrier is the direct conversion of the unfinished hull of her Ismail-class battlecruiser namesake. Due to the nature of conversion, the ship has a thick armour belt and strong anti-surface and AA armament for her time. A moderately-sized air group provides her fleet the necessary air cover. The project was not carried out until late 1930-s due to costs and the state of the Russian shipbuilding industry after the revolution and civil war."
@@ -345,3 +413,4 @@ SWE_carrier_3_desc:1 "As the world is starting to burn around us the destructive
 
 SWE_carrier_4:1 "Lindman Class"
 SWE_carrier_4_desc:1 "Named after the recently deceased admiral and former prime-minister Arvid Lindman this ship would be the pride of Sweden and a force to be reckoned with on any sea."
+
