--- a/localisation/KR_Equipment_l_english.yml
+++ b/localisation/KR_Equipment_l_english.yml
@@ -1136,8 +1136,8 @@ SWE_infantry_equipment_0:0 "Mauser m/38"
 SWE_infantry_equipment_0_short:0 "Mauser m/38"
 SWE_infantry_equipment_1:0 "Ag m/42"
 SWE_infantry_equipment_1_short:0 "Ag m/42"
-SWE_infantry_equipment_2:0 "kpist m/37-39"
-SWE_infantry_equipment_2_short:0 "kpist m/37-39"
+SWE_infantry_equipment_2:0 "Kpist m/37-39"
+SWE_infantry_equipment_2_short:0 "Kpist m/37-39"
 SWE_infantry_equipment_3:0 "Kpist m/45"
 SWE_infantry_equipment_3_short:0 "Kpist m/45"
 
