Made it clear I haven't checked these files

--- a/localisation/KR_Equip_Air_l_english.yml
+++ b/localisation/KR_Equip_Air_l_english.yml
@@ -1,5 +1,7 @@
 ﻿l_english:
 
+#NOT checked by Zankoas, here be spelling errors
+
 fighter:0 "Fighter"
 fighter_equipment_desc:0 "Fighters are fast and nimble and can do many jobs. Everything from fighting for air superiority, protect your bombers and intercept the enemies bombers."
 cv_fighter:0 "Fighter"
