--- a/localisation/KR_Equipment_l_english.yml
+++ b/localisation/KR_Equipment_l_english.yml
@@ -1,6 +1,6 @@
 ﻿l_english:
 
-#My eyes hurt, ~mw~ please check this, I am sure I have missed some mistakes
+#NOT checked by Zankoas, here be spelling errors
 
 EQUIPMENT_DESIGNER_DESC:0 "Designed by: $DESIGNER|Y$"
 EQUIPMENT_ARMOR:0 "Armour"
