Few spelling fixes

--- a/localisation/KR_American_Civil_War_l_english.yml
+++ b/localisation/KR_American_Civil_War_l_english.yml
@@ -215,7 +215,7 @@ amcivwar.44.b:0 "Accept peace and rejoin the Union"
 amcivwar.44.c:0 "Accept peace and ally with MacArthur"
 amcivwar.44.e:0 "MacArthur is a petty despot, we will not negotiate with him"
 amcivwar.45.t:0 "Pacific States of America Requests Independence"
-amcivwar.45.d:0 "The Pacific States of America has demanded MacArthur recognize them as an independent nation. If he accepted there would be peace but the United States would never be the same."
+amcivwar.45.d:0 "The Pacific States of America has demanded MacArthur recognise them as an independent nation. If he accepted there would be peace but the United States would never be the same."
 amcivwar.45.a:0 "MacArthur Accepts"
 amcivwar.45.b:0 "MacArthur rejects and the war continues"
 amcivwar.46.t:0 "Pacific States of America Rejoins the Union"
@@ -225,7 +225,7 @@ amcivwar.47.t:0 "Pacific States of America Allies with MacArthur"
 amcivwar.47.d:0 "The PSA has accepted that the US and themselves share the same interests and enemies. MacArthur was more than willing to have California on his side."
 amcivwar.47.a:0 "Alliance for the future"
 amcivwar.48.t:0 "The Question of the PSA"
-amcivwar.48.d:0 "Curtis needed to address the question of the PSA. Getting the PSA's help in the war would not be easy or cheap but it would guarrantee that the PSA stays out of the war."
+amcivwar.48.d:0 "Curtis needed to address the question of the PSA. Getting the PSA's help in the war would not be easy or cheap but it would guarantee that the PSA stays out of the war."
 amcivwar.48.a:0 "Send a request for a conference."
 amcivwar.48.b:0 "We will deal with them after the war."
 amcivwar.49.t:0 "The Pacific State Conference"
@@ -868,7 +868,7 @@ amcivwar.272.a:0 "Support Federal Government"
 amcivwar.272.b:0 "Support Union State"
 amcivwar.272.c:0 "Not our concern"
 amcivwar.274.t:0 "American Civil War"
-amcivwar.274.d:0 "America has devolved into civil war and we must help our socialist brothers in the CSA in their deadly strugle with capitalist opressors."
+amcivwar.274.d:0 "America has devolved into civil war and we must help our socialist brothers in the CSA in their deadly struggle with capitalist oppressors."
 amcivwar.274.a:0 "Send the volunteers"
 amcivwar.274.b:0 "We should not get involved"
 amcivwar.275.t:0 "American Civil War"
