--- a/localisation/KR_American_Union_State_l_english.yml
+++ b/localisation/KR_American_Union_State_l_english.yml
@@ -256,6 +256,7 @@ TEX_entente_embargo:0 "Embargo the Entente"
 TEX_entente_embargo_desc:0 ""
 TEX_invade_canada:0 "Invade Canada"
 TEX_invade_canada_desc:0 ""
+
 ### Ideas ###
 TEX_pattons_mobility_plan:0 "Patton's Mobility Plan"
 TEX_pattons_mobility_plan2:0 "Patton's Mobility Plan"
@@ -588,12 +589,12 @@ unionstate.130.t:0 "The New America"
 unionstate.130.d:0 "The death of Huey Long swept the American Legion into power lead by William Dudley Pelley. This allowed the extremists within the American First to reshape America to their own desires. And today a new dawn has risen in America. Once located to mainly the south, Jim Crow laws now are the law of the land throughout the country. Christianity has been reinforced as the religion of the people and the country. "
 unionstate.130.a:0 "God Bless America!"
 
-unionstate.200.t:0 "America wishes to join Mittleuropa"
-unionstate.200.d:0 "The American union State has sent us a request to join Mittleuropa. The industrial might of America would be a great boon to the German Empire, and the Americans have promised to help us do everything they can to destroy syndicalism throughout America. It does help that there many German-Americans in the American Union State government. This alliance would help strengthen the ties between America and Germany, though some wonder if we should ally with such a regime in America."
+unionstate.200.t:0 "America wishes to join Mitteleuropa"
+unionstate.200.d:0 "The American union State has sent us a request to join Mitteleuropa. The industrial might of America would be a great boon to the German Empire, and the Americans have promised to help us do everything they can to destroy syndicalism throughout America. It does help that there many German-Americans in the American Union State government. This alliance would help strengthen the ties between America and Germany, though some wonder if we should ally with such a regime in America."
 unionstate.200.a:0 "America can Join"
 unionstate.200.b:0 "We do not need the Americans"
-unionstate.201.t:0 "America in Mittleuropa"
-unionstate.201.d:0 "The Germans have brought us into Mittleuropa. Now together with the Germans we stand together against Syndicalism. "
+unionstate.201.t:0 "America in Mitteleuropa"
+unionstate.201.d:0 "The Germans have brought us into Mitteleuropa. Now together with the Germans we stand together against Syndicalism. "
 unionstate.201.a:0 "Great!"
 unionstate.202.t:0 "Canada Holds Alaska"
 unionstate.202.d:0 "After the American Union had triumphed in the American Civil War they looked to reclaim the territories that were lost to non-Americans. The Canadians had seized Alaska at the beginning of the war and there was some concern that they did not plan to return it. Long and the leaders of the American Union were considering war with the Entente to reclaim Alaska."
@@ -612,12 +613,12 @@ unionstate.205.a:0 "War with Canada"
 unionstate.205.b:0 "We must work with our neighbours"
 
 unionstate.206.t:0 "Fate of Hawaii?"
-unionstate.206.d:0 "Now that we have reclaimed the mainland of America, political eyes have turned outward and our wondering what shall we do about the islands of Hawaii. Many are clamoring for us to retake the isles since they rightfully belong to America since the USA annexed the islands in 1893. While a few say that we don't need them, especially since they are not White Americans. "
+unionstate.206.d:0 "Now that we have reclaimed the mainland of America, political eyes have turned outward and our wondering what shall we do about the islands of Hawaii. Many are clamouring for us to retake the isles since they rightfully belong to America since the USA annexed the islands in 1893. While a few say that we don't need them, especially since they are not White Americans. "
 unionstate.206.a:0 "Hawaii is American!"
-unionstate.206.b:0 "We don't need Pinapples in America!"
+unionstate.206.b:0 "We don't need Pineapples in America!"
 unionstate.207.t:0 "The AUS demand!"
 unionstate.207.d:0 "The American Union State has arrived in Honolulu to demand that we surrender to them and join the American Union State. They have arrived with several battleships off the coast of Hawai'i to back up this claim. Many are saying that they rather fight and die for Hawai'i. Of course some politicians are saying that it would be better to save Hawai'ian lives by surrendering"
-unionstate.207.a:0 "Never Surender!"
+unionstate.207.a:0 "Never Surrender!"
 unionstate.207.b:0 "Surrender!"
 unionstate.208.t:0 "The AUS gives up Hawai'i"
 unionstate.208.d:0 "While there were numerous concerns that the American Union State would be going to go to war for Hawai'i, an American envoy has arrived saying that the American Union State no longer claims Hawai'i as American territory. We are free from the American Menace. "
