As per MW's request, Chile's Intro even is now in

--- a/localisation/KR_Chile_l_english.yml
+++ b/localisation/KR_Chile_l_english.yml
@@ -23,16 +23,16 @@ CHL_totalist_party:0 "PRP"
 CHL_totalist_party_long:0 "Partido Revolucionario Permanente"
 
 ### Events ###
-chl.1.t:0 
-chl.1.d:0 
-chl.1.a:0 
-chl.1.b:0 
+chl.1.t:0 "Earthquake in Chile"
+chl.1.d:0 "An earthquake in Chile killed 30.000 people and thousands of people are left homeless. We should do something to help them."
+chl.1.a:0 "Help the survivors"
+chl.1.b:0 "Who cares?"
 chl.2.t:0 
-chl.2.d:0 
+chl.2.d:0  
 chl.2.a:0 
-chl.3.t:0 
-chl.3.d:0  
-chl.3.a:0 
+chl.3.t:0 "Chile in 1936"
+chl.3.d:0 "After the Saltpetre War 1879 - 1883 in which Chile received the Peruvian saltpetre provinces Tarapacá and Arica in addition to the Bolivian coastal region of Antofagasta the country had command over vast copper deposits and monopolised the world trade in saltpetre. A phase of economic prosperity was initiated, supported by the high demand for saltpetre at the beginning of Weltkrieg. However, the chemical processes devised during that war to artificially produce saltpetre rendered Chile's deposits worthless. Worsening economic circumstances, together with the growth of the population increased social crisis. Workers and unions gained political influence, especially under the disastrous rule of Carlos Ibañez Del Campo, during which Chile bankrupted, in 1931. Shorly afterwards. Ibañez was deposed, and the navy and most of the army mutined, and with the support of the people, and the of arrival of reinforcements from the long exiled Marmaduke Grove arriving from the Union of Britain, the Syndicalist Republic of Chile was proclaimed. After 5 years of rebuilding under the first council, led at least nominally by Arturo Puga, the republic economy recovered greatly, and a military build-up has begun after the Platine War. Now, with La Plata's rethoric becoming increasingly agressive, the well respected Marmaduke Grove, miltary man veteran of two revolutions oceans apart, is at the helm of the rebuilding you republic. However, not all Chileans are as hopeful for the future as the syndical leaders are..."
+chl.3.a:0 "The Light of Syndicalism will guide us to the future, whatever it may hold"
 chl.4.t:0 
 chl.4.d:0 
 chl.4.a:0 
