--- a/localisation/KR_State_Names_l_english.yml
+++ b/localisation/KR_State_Names_l_english.yml
@@ -874,3 +874,6 @@ STATE_871:0 "Njassaland"
 STATE_872:0 "Arica"
 STATE_873:0 "Tarapacá"
 STATE_874:0 "Atacama"
+STATE_875:0 "Nyugat-Bánság"
+STATE_876:0 "Dahomé"
+STATE_877:0 "Togoland"
