--- a/localisation/KR_Countries_l_english.yml
+++ b/localisation/KR_Countries_l_english.yml
@@ -3123,9 +3123,9 @@ POL_authoritarian_democrat_DEF:0 "The Kingdom of Poland"
 POL_market_liberal:0 "Kingdom of Poland"
 POL_market_liberal_ADJ:0 "Polish"
 POL_market_liberal_DEF:0 "The Kingdom of Poland"
-POL_national_populist:0 "Kingdom of Poland"
+POL_national_populist:0 "Poland"
 POL_national_populist_ADJ:0 "Polish"
-POL_national_populist_DEF:0 "The Kingdom of Poland"
+POL_national_populist_DEF:0 "Poland"
 POL_paternal_autocrat:0 "Kingdom of Poland"
 POL_paternal_autocrat_ADJ:0 "Polish"
 POL_paternal_autocrat_DEF:0 "The Kingdom of Poland"
@@ -3147,39 +3147,6 @@ POL_syndicalist_DEF:0 "The Polish Socialist Republic"
 POL_totalist:0 "Polish Socialist Republic"
 POL_totalist_ADJ:0 "Socialist-Polish"
 POL_totalist_DEF:0 "The Polish Socialist Republic"
-
-### Polish Republic Cosmetic Tag ###
-
-POL_REPUBLIC_authoritarian_democrat:0 "Polish Republic"
-POL_REPUBLIC_authoritarian_democrat_ADJ:0 "Polish"
-POL_REPUBLIC_authoritarian_democrat_DEF:0 "The Polish Republic"
-POL_REPUBLIC_market_liberal:0 "Poland"
-POL_REPUBLIC_market_liberal_ADJ:0 "Polish"
-POL_REPUBLIC_market_liberal_DEF:0 "Poland"
-POL_REPUBLIC_national_populist:0 "Polish Republic"
-POL_REPUBLIC_national_populist_ADJ:0 "Polish"
-POL_REPUBLIC_national_populist_DEF:0 "The Polish Republic"
-POL_REPUBLIC_paternal_autocrat:0 "Polish Republic"
-POL_REPUBLIC_paternal_autocrat_ADJ:0 "Polish"
-POL_REPUBLIC_paternal_autocrat_DEF:0 "The Polish Republic"
-POL_REPUBLIC_radical_socialist:0 "Polish Socialist Republic"
-POL_REPUBLIC_radical_socialist_ADJ:0 "Socialist-Polish"
-POL_REPUBLIC_radical_socialist_DEF:0 "Polish Socialist Republic"
-POL_REPUBLIC_social_conservative:0 "Polish Republic"
-POL_REPUBLIC_social_conservative_ADJ:0 "Polish"
-POL_REPUBLIC_social_conservative_DEF:0 "The Polish Republic"
-POL_REPUBLIC_social_democrat:0 "Polish Republic"
-POL_REPUBLIC_social_democrat_ADJ:0 "Polish"
-POL_REPUBLIC_social_democrat_DEF:0 "The Polish Republic"
-POL_REPUBLIC_social_liberal:0 "Polish Republic"
-POL_REPUBLIC_social_liberal_ADJ:0 "Polish"
-POL_REPUBLIC_social_liberal_DEF:0 "The Polish Republic"
-POL_REPUBLIC_syndicalist:0 "Polish Socialist Republic"
-POL_REPUBLIC_syndicalist_ADJ:0 "Socialist-Polish"
-POL_REPUBLIC_syndicalist_DEF:0 "The Polish Socialist Republic"
-POL_REPUBLIC_totalist:0 "Polish Socialist Republic"
-POL_REPUBLIC_totalist_ADJ:0 "Socialist-Polish"
-POL_REPUBLIC_totalist_DEF:0 "The Polish Socialist Republic"
 
 POR_authoritarian_democrat:0 "Portugal"
 POR_authoritarian_democrat_ADJ:0 "Portuguese"
