some more work on the AUS

--- a/localisation/KR_American_Civil_War_l_english.yml
+++ b/localisation/KR_American_Civil_War_l_english.yml
@@ -121,6 +121,13 @@ amcivwar.16.b:0 "Rather not"
 amcivwar.17.t:0 "Canada Seizes the Panama Canal"
 amcivwar.17.d:0 "With America in turmoil, Canada has seized the Panama Canal to ensure that it stays open for travel. Canada has promised to keep the canal open to all traffic and respect America's claim to it."
 amcivwar.17.a:0 "Too bad"
+amcivwar.1600.t:0 "The Panama Canal"
+amcivwar.1600.d:0 "The civil war has erupted in the United states, tearing apart the last shreds of unity in the Union. This present us with the opportunity to reclaim the Panama Canal. The canal after all rightly belongs to Panama."
+amcivwar.1600.a:0 "Seize the Panama canal!"
+amcivwar.1600.b:0 "Rather not"
+amcivwar.1700.t:0 "Panama Seizes the Panama Canal"
+amcivwar.1700.d:0 "With America in turmoil, Panama has seized the Panama Canal to ensure that it stays open for travel. Panama has promised to keep the canal open to all traffic and respect America's claim to it."
+amcivwar.1700.a:0 "Too bad"
 amcivwar.18.t:0 "Pacific States of America Independence"
 amcivwar.18.d:0 "When the Pacific States of America declared its independence from the United States there were many in the new country who wanted to see a war to ensure the security and prosperity of the west coast. A war would be dangerous as the United States would not go quietly into the night."
 amcivwar.18.a:0 "We must fight to secure our future"
