--- a/localisation/KR_American_Union_State_l_english.yml
+++ b/localisation/KR_American_Union_State_l_english.yml
@@ -630,3 +630,41 @@ unionstate.209.b:0 "It is not worth it"
 unionstate.210.t:0 "Hawaii gives in!"
 unionstate.210.d:0 "The Hawaiians have given up and joined America. Today is a great day and the islands of Hawaii are now once again part of America!"
 unionstate.210.a:0 "Great!"
+unionstate.211.t:0 "The Mexican Coup?"
+unionstate.211.d:0 "The Mexican government is an affront to America. They are a godless syndicalist nation and we can not tolerate such a government on our borders. However, Pablo González Garza has offered us a solution let him take over and he will make Mexico friendly to our interest and American Business. "
+unionstate.211.a:0 "Launch the Coup!"
+unionstate.212.t:0 "Garza's Coup!"
+unionstate.212.d:0 "Pablo González Garza and a number of men have surrounded the Presidential Palace. With aid obviously coming from America he is making a power grab to take control of Mexico and destroy our government. As the dust settles the coup turns out to be..."
+unionstate.212.a:0 "The Coup is successful!"
+unionstate.212.b:0 "The Coup Fails!"
+unionstate.213.t:0 "The Coup is successful"
+unionstate.213.d:0 "We have received word from Garza that he is now in control of Mexico and that he will be doing all that he can to destroy syndicalism within the country. Our border with our southern neighbors shall now be better protected without godless syndicalists at our gates. "
+unionstate.213.a:0 "Great!"
+unionstate.214.t:0 "Treaty with America?"
+unionstate.214.d:0 "Now that Garza is in control of Mexico, it would be good to sign a treaty with the American Union State giving us better relations. This would of course place Mexico in the American orbit but the gringos would want some reward for helping us get into power and would get them off our back."
+unionstate.214.a:0 "Let us join the League of American States"
+unionstate.214.b:0 "Let us sign a treaty of freindship"
+unionstate.215.t:0 "The Coup Fails!"
+unionstate.215.d:0 "Pablo González Garza and his band of traitors have been dealt with. Their plan to destroy the Mexican revolution has been foiled. Now however we must make plans for war. The Americans are not likely to accept the fact that their coup failed lightly and will likely go to war to destroy Mexico."
+unionstate.215.a:0 "Bloody Gringos!"
+unionstate.216.t:0 "The Coup Fails!"
+unionstate.216.d:0 "The coup in Mexico has failed and we now must figure out how to proceed with Mexico. Many are demanding that we declare war on Mexico to restore peace and order and set up Mexico suitable for American business and our interests. A few are saying we should have peace with the Mexicans."
+unionstate.216.a:0 "War against the godless Syndicalists!"
+unionstate.216.b:0 "War is not needed"
+unionstate.217.t:0 "Treaty with America?"
+unionstate.217.d:0 "The United states have come with a treaty to improve relations between our two nations. Such a treaty will improve the trade relations and offer an guarantee of protection for Mexico. It would be foolish to say no to such an arrangement but others fear binding ourselves to the Americans."
+unionstate.217.a:0 "Sign the Treaty"
+unionstate.217.b:0 "Sign the Treaty"
+unionstate.217.c:0 "Don't Sign the Treaty"
+
+unionstate.218.t:0 "Mexico Joins the League of the American States"
+unionstate.218.d:0 "The Mexicans have accepted our treaty and joined the League of American States. Further cooperation between our two countries shall bring great benefits to both countries and syndicalism shall never return to Mexico."
+unionstate.218.a:0 "Good News!"
+
+unionstate.219.t:0 "Freindly Meixcan Government"
+unionstate.219.d:0 "The Mexicans have accepted our treaty. Further cooperation between our two countries shall bring great benefits to both countries and syndicalism shall never return to Mexico."
+unionstate.219.a:0 "Pleasure doing business	"
+
+unionstate.220.t:0 "Mexicans Refuse"
+unionstate.220.d:0 "The Mexicans have refused to sign a genius treaty. We should have expected such stupidity from the Mexicans."
+unionstate.220.a:0 "Stupid Mexicans"
