--- a/localisation/KR_Fengtian_l_english.yml
+++ b/localisation/KR_Fengtian_l_english.yml
@@ -531,6 +531,37 @@ fengtian.new.22.b:0 "A perfect time to strike!"
 fengtian.new.23.t:0 "Japanese Aid Returns"
 fengtian.new.23.d:0 "Apparently feeling that their lesson in obedience is clear and punishing enough, the Japanese have resumed their aid. We should be careful about provoking them in the future, and make sure not to push the Concordia Association too far out of the Assembly before we are ready."
 fengtian.new.23.a:0 "At last!"
+#Clearing Investment Dearth#
+fengtian.new.24.t:0 "Encouraging Japanese Investment"
+fengtian.new.24.d:0 "INSERT"
+fengtian.new.24.a:0 "A necessary evil"
+fengtian.new.25.t:0 "Japanese Investment in Glass, Paper, and Textiles"
+fengtian.new.25.d:0 "INSERT"
+fengtian.new.25.a:0 "Good news"
+fengtian.new.26.t:0 "Japanese Investment in Shipping and Tourism"
+fengtian.new.26.d:0 "INSERT"
+fengtian.new.26.a:0 "Good news"
+fengtian.new.27.t:0 "Japanese Investment in Industrial Materials"
+fengtian.new.27.d:0 "INSERT"
+fengtian.new.27.a:0 "Good news"
+fengtian.new.28.t:0 "Japanese Investment in Steel"
+fengtian.new.28.d:0 "INSERT"
+fengtian.new.28.a:0 "Good news"
+fengtian.new.29.t:0 "Encouraging Chinese Investment"
+fengtian.new.29.d:0 "INSERT"
+fengtian.new.29.a:0 "Good news"
+fengtian.new.30.t:0 "Chinese Investment in Light Industry"
+fengtian.new.30.d:0 "INSERT"
+fengtian.new.30.a:0 "Good news"
+fengtian.new.31.t:0 "Chinese Investment in Heilongjiang"
+fengtian.new.31.d:0 "INSERT"
+fengtian.new.31.a:0 "Good news"
+fengtian.new.32.t:0 "The Creation of Mingsheng Automobile Company"
+fengtian.new.32.d:0 "INSERT"
+fengtian.new.32.a:0 "Good news!"
+fengtian.new.33.t:0 "An End to the Investment Shortage"
+fengtian.new.33.d:0 "INSERT"
+fengtian.new.33.a:0 "Finally!"
 
 ### Informal Empire Mechanic ###
 fengtian.informalempire.1.t:0 "Expel the Japanese Bandits!"
