Added Warsaw to the custom terrain list.
+ Minor Poland fixes

--- a/localisation/KR_Poland_l_english.yml
+++ b/localisation/KR_Poland_l_english.yml
@@ -18,9 +18,9 @@ POL_eternal_regency_desc:0 "Poland's Regency council, initially created to decid
 POL_german_advisors:0 "German Advisers"
 POL_german_advisors_desc:0 "Reforming our military and political structure is of the utmost importance if we are to remain politically relevant in Europe. By taking advantage of our close ties with Germany, we can allow them to send us advisers to modernise our armed forces."
 POL_mathematics_schools:0 "Mathematics Schools"
-POL_mathematics_schools_desc:0 "to-do"
+POL_mathematics_schools_desc:0 "Mathematics Schools"
 POL_winged_hussars_idea:0 "Spirit of the Winged Hussars"
-POL_winged_hussars_idea_desc:0 "to-do"
+POL_winged_hussars_idea_desc:0 "Spirit of the Winged Hussars"
 POL_offensive_force_idea:0 "An Offensive Force"
 POL_offensive_force_idea_desc:0 "Poland finds herself surrounded on all sides by nations that have no love for her. But it is not enough to merely sit back and watch as our enemies plan around us. It is we who must make the first strike, and destroy our enemies before they can destroy us."
 POL_defensive_tactics_idea:0 "Defensive Tactics"
