--- a/localisation/terrain_l_english.yml
+++ b/localisation/terrain_l_english.yml
@@ -191,6 +191,9 @@
  london:0 "Urban"
  london_desc:0 ""
  
+ warsaw:0 "Urban"
+ warsaw_desc:0 ""
+ 
  #Hills ------------------------------------------------------------
  gibraltar:0 "Hills"
  gibraltar_desc:0 ""
