--- a/localisation/KR_Countries_l_english.yml
+++ b/localisation/KR_Countries_l_english.yml
@@ -2025,30 +2025,30 @@ HAI_totalist:0 "Socialist Republic of Haiti"
 HAI_totalist_ADJ:0 "Haitian"
 HAI_totalist_DEF:0 "The Socialist Republic of Haiti"
 
-HOL_authoritarian_democrat:0 "NeTherlands"
+HOL_authoritarian_democrat:0 "Netherlands"
 HOL_authoritarian_democrat_ADJ:0 "Dutch"
-HOL_authoritarian_democrat_DEF:0 "NeTherlands"
-HOL_market_liberal:0 "NeTherlands"
+HOL_authoritarian_democrat_DEF:0 "Netherlands"
+HOL_market_liberal:0 "Netherlands"
 HOL_market_liberal_ADJ:0 "Dutch"
-HOL_market_liberal_DEF:0 "NeTherlands"
-HOL_national_populist:0 "NeTherlands"
+HOL_market_liberal_DEF:0 "Netherlands"
+HOL_national_populist:0 "Netherlands"
 HOL_national_populist_ADJ:0 "Dutch"
-HOL_national_populist_DEF:0 "NeTherlands"
-HOL_paternal_autocrat:0 "NeTherlands"
+HOL_national_populist_DEF:0 "Netherlands"
+HOL_paternal_autocrat:0 "Netherlands"
 HOL_paternal_autocrat_ADJ:0 "Dutch"
-HOL_paternal_autocrat_DEF:0 "NeTherlands"
+HOL_paternal_autocrat_DEF:0 "Netherlands"
 HOL_radical_socialist:0 "Batavian Commune"
 HOL_radical_socialist_ADJ:0 "Dutch"
 HOL_radical_socialist_DEF:0 "The Batavian Commune"
-HOL_social_conservative:0 "NeTherlands"
+HOL_social_conservative:0 "Netherlands"
 HOL_social_conservative_ADJ:0 "Dutch"
-HOL_social_conservative_DEF:0 "NeTherlands"
-HOL_social_democrat:0 "NeTherlands"
+HOL_social_conservative_DEF:0 "Netherlands"
+HOL_social_democrat:0 "Netherlands"
 HOL_social_democrat_ADJ:0 "Dutch"
-HOL_social_democrat_DEF:0 "NeTherlands"
-HOL_social_liberal:0 "NeTherlands"
+HOL_social_democrat_DEF:0 "Netherlands"
+HOL_social_liberal:0 "Netherlands"
 HOL_social_liberal_ADJ:0 "Dutch"
-HOL_social_liberal_DEF:0 "NeTherlands"
+HOL_social_liberal_DEF:0 "Netherlands"
 HOL_syndicalist:0 "Batavian Commune"
 HOL_syndicalist_ADJ:0 "Dutch"
 HOL_syndicalist_DEF:0 "The Batavian Commune"
@@ -4295,18 +4295,18 @@ WAL_totalist:0 "Welsh Union"
 WAL_totalist_ADJ:0 "Welsh"
 WAL_totalist_DEF:0 "The Welsh Union"
 
-WHR_authoritarian_democrat:0 "White RuThenia"
-WHR_authoritarian_democrat_ADJ:0 "RuThenian"
-WHR_authoritarian_democrat_DEF:0 "White RuThenia"
+WHR_authoritarian_democrat:0 "White Ruthenia"
+WHR_authoritarian_democrat_ADJ:0 "Ruthenian"
+WHR_authoritarian_democrat_DEF:0 "White Ruthenia"
 WHR_market_liberal:0 "Belarus"
-WHR_market_liberal_ADJ:0 "RuThenian"
+WHR_market_liberal_ADJ:0 "Ruthenian"
 WHR_market_liberal_DEF:0 "Belarus"
-WHR_national_populist:0 "White RuThenia"
-WHR_national_populist_ADJ:0 "RuThenian"
-WHR_national_populist_DEF:0 "White RuThenia"
-WHR_paternal_autocrat:0 "White RuThenia"
-WHR_paternal_autocrat_ADJ:0 "RuThenian"
-WHR_paternal_autocrat_DEF:0 "White RuThenia"
+WHR_national_populist:0 "White Ruthenia"
+WHR_national_populist_ADJ:0 "Ruthenian"
+WHR_national_populist_DEF:0 "White Ruthenia"
+WHR_paternal_autocrat:0 "White Ruthenia"
+WHR_paternal_autocrat_ADJ:0 "Ruthenian"
+WHR_paternal_autocrat_DEF:0 "White Ruthenia"
 WHR_radical_socialist:0 "Socialist Republic of Belarus"
 WHR_radical_socialist_ADJ:0 "Belarussian"
 WHR_radical_socialist_DEF:0 "The Socialist Republic of Belarus"
@@ -4317,7 +4317,7 @@ WHR_social_democrat:0 "Belarus"
 WHR_social_democrat_ADJ:0 "Belarussian"
 WHR_social_democrat_DEF:0 "Belarus"
 WHR_social_liberal:0 "Belarus"
-WHR_social_liberal_ADJ:0 "RuThenian"
+WHR_social_liberal_ADJ:0 "Ruthenian"
 WHR_social_liberal_DEF:0 "Belarus"
 WHR_syndicalist:0 "Socialist Republic of Belarus"
 WHR_syndicalist_ADJ:0 "Belarussian"
