Poland - Minor fixes.

--- a/localisation/KR_Poland_l_english.yml
+++ b/localisation/KR_Poland_l_english.yml
@@ -2,6 +2,7 @@
 
 ### Ideas ###
 Held_Elections:0 "Recently Held Elections"
+Held_Elections_desc:0 "The Sejm has recently held public elections, and will not do so for another 4 years."
 Funding_UKR_Partisans:0 "Funding partisans in Poland"
 sell_bucovina:0 "Sold Bucovina"
 buy_bucovina:0 "Bought Bucovina"
