changes nonsensical Kallar terms to stuff that makes sense

--- a/localisation/KR_Austria_l_english.yml
+++ b/localisation/KR_Austria_l_english.yml
@@ -70,10 +70,10 @@ AUS_racial_revolts:0 "Racial Revolts"
 AUS_racial_revolts:0 "The racial tensions have escalated and ushered in open revolt. These are dark times for Austria."
 
 ### Foci ###
-AUS_eco_council:0 "The Kaiserrat"
-AUS_black_monday_1_focus:0 "Reichsnorm Gesetz"
-AUS_black_monday_2_focus:0 "Reichswirtschafts Standart"
-AUS_eco_investment:0 "Reichswirtschafsministeriat"
+AUS_eco_council:0 "The k.k. Ministeria"
+AUS_black_monday_1_focus:0 "k.k. Ministerium für Finanzen"
+AUS_black_monday_2_focus:0 "k.k. Ministerium für Handel"
+AUS_eco_investment:0 "k.k. Sonderkommission für Wirtschaftliche Rehabilitation"
 AUS_farms_expand:0 "Expand domestic Farms"
 AUS_montenegro_resources:0 "Montenegro Oil Rigs"
 AUS_alpine_highways:0 "Alpine Highways"
