--- a/localisation/KR_American_Union_State_l_english.yml
+++ b/localisation/KR_American_Union_State_l_english.yml
@@ -643,7 +643,7 @@ unionstate.213.a:0 "Great!"
 unionstate.214.t:0 "Treaty with America?"
 unionstate.214.d:0 "Now that Garza is in control of Mexico, it would be good to sign a treaty with the American Union State giving us better relations. This would of course place Mexico in the American orbit but the gringos would want some reward for helping us get into power and would get them off our back."
 unionstate.214.a:0 "Let us join the League of American States"
-unionstate.214.b:0 "Let us sign a treaty of freindship"
+unionstate.214.b:0 "Let us sign a treaty of friendship"
 unionstate.215.t:0 "The Coup Fails!"
 unionstate.215.d:0 "Pablo González Garza and his band of traitors have been dealt with. Their plan to destroy the Mexican revolution has been foiled. Now however we must make plans for war. The Americans are not likely to accept the fact that their coup failed lightly and will likely go to war to destroy Mexico."
 unionstate.215.a:0 "Bloody Gringos!"
@@ -661,7 +661,7 @@ unionstate.218.t:0 "Mexico Joins the League of the American States"
 unionstate.218.d:0 "The Mexicans have accepted our treaty and joined the League of American States. Further cooperation between our two countries shall bring great benefits to both countries and syndicalism shall never return to Mexico."
 unionstate.218.a:0 "Good News!"
 
-unionstate.219.t:0 "Freindly Meixcan Government"
+unionstate.219.t:0 "Friendly Mexican Government"
 unionstate.219.d:0 "The Mexicans have accepted our treaty. Further cooperation between our two countries shall bring great benefits to both countries and syndicalism shall never return to Mexico."
 unionstate.219.a:0 "Pleasure doing business	"
 
