--- a/localisation/KR_Georgia_l_english.yml
+++ b/localisation/KR_Georgia_l_english.yml
@@ -1,7 +1,7 @@
 ﻿l_english:
 
 ### Foci ###
-GEO_The_Peoples_Guard:0 "The People's Guard"
+GEO_The_Peoples_Guard:0 "Military Focus"
 GEO_The_Peoples_Guard_desc:0 ""
 GEO_Army_Modernization:0 "Army Modernisation"
 GEO_Army_Modernization_desc:0 ""
@@ -11,7 +11,7 @@ GEO_Doctrine_Focus:0 "Doctrine Focus"
 GEO_Doctrine_Focus_desc:0 ""
 GEO_Caucasus_Fortification:0 "Caucasus Fortification"
 GEO_Caucasus_Fortification_desc:0 ""
-GEO_Artillery_Weaponry:0 "Artillery weaponry"
+GEO_Artillery_Weaponry:0 "Artillery Weaponry"
 GEO_Artillery_Weaponry_desc:0 ""
 GEO_Army_Motorization:0 "Army Motorisation"
 GEO_Army_Motorization_desc:0 ""
@@ -106,6 +106,58 @@ GEO_Invest_In_Universities:0 "Invest in Universities"
 GEO_Invest_In_Universities_desc:0 ""
 GEO_Expand_Azerbaijan_State_Oil_Academy:0 "Expand Azerbaijan State Oil Academy"
 GEO_Expand_Azerbaijan_State_Oil_Academy_desc:0 ""
+GEO_Socialist_Path:0 "Socialist Path"
+GEO_Socialist_Path_desc:0 ""
+GEO_Totalist_Dictatorship:0 "Totalist Dictatorship"
+GEO_Totalist_Dictatorship_desc:0 ""
+GEO_Totalist_Propaganda:0 "Totalist Propaganda"
+GEO_Totalist_Propaganda_desc:0 ""
+GEO_Strengthen_The_SUS:0 "Strengthen the SUS"
+GEO_Strengthen_The_SUS_desc:0 ""
+GEO_Purge_Other_Parties:0 "Purge Other Parties"
+GEO_Purge_Other_Parties_desc:0 ""
+GEO_Socialist_Republic:0 "Socialist Republic"
+GEO_Socialist_Republic_desc:0 ""
+GEO_De-Totalisation:0 "De-Totalisation Policy"
+GEO_De-Totalisation_desc:0 ""
+GEO_Appease_Workers:0 "Appease Working Class"
+GEO_Appease_Workers_desc:0 ""
+GEO_Socialist_Coalition:0 "Form a Socialist Coalition"
+GEO_Socialist_Coalition_desc:0 ""
+GEO_Transitional_Liberty_Council:0 "Transitional Liberty Council"
+GEO_Transitional_Liberty_Council_desc:0 ""
+GEO_Democratic_Republic:0 "Create a Democratic Republic"
+GEO_Democratic_Republic_desc:0 ""
+GEO_Political_Freedom:0 "Political Freedom"
+GEO_Political_Freedom_desc:0 ""
+GEO_Secular_State:0 "Secular State"
+GEO_Secular_State_desc:0 "Form a Secular State"
+GEO_Constituent_Assembly:0 "Reform the Constituent Assembly"
+GEO_Constituent_Assembly_desc:0 ""
+GEO_Constitutional_Monarchy:0 "Form a Constitutional Monarchy"
+GEO_Constitutional_Monarchy_desc:0 ""
+GEO_Reform_Constitution:0 "Rewrite the Constitution"
+GEO_Reform_Constitution_desc:0 ""
+GEO_Separate_Church:0 "Separate Church and State"
+GEO_Separate_Church_desc:0 ""
+GEO_Cooperate_With_Parliament:0 "Cooperate with Parliament"
+GEO_Cooperate_With_Parliament_desc:0 ""
+GEO_Absolute_Monarchy:0 "Form an Absolute Monarchy"
+GEO_Absolute_Monarchy_desc:0 ""
+GEO_Restore_Legitimacy:0 "Restore Dynastic Legitimacy"
+GEO_Restore_Legitimacy_desc:0 ""
+GEO_Church_Authority:0 "Grant Patriarchal Authority"
+GEO_Church_Authority_desc:0 ""
+GEO_Curb_Parliament:0 "Curb Parliament"
+GEO_Curb_Parliament_desc:0 ""
+GEO_Military_Junta:0 "Retain Military Control"
+GEO_Military_Junta_desc:0 ""
+GEO_Menshevik_Crackdown:0 "Crackdown on Mensheviks"
+GEO_Menshevik_Crackdown_desc:0 ""
+GEO_Military_Tradition:0 "Military Tradition"
+GEO_Military_Tradition_desc:0 ""
+GEO_Legacy_of_Tetri_Giorgi:0 "Legacy of Tetri Giorgi"
+GEO_Legacy_of_Tetri_Giorgi_desc:0 ""
 
 ### Events ###
 geo.1.t:0 "Socialist Republic of Georgia"
