--- a/localisation/KR_Victory_Points_l_english.yml
+++ b/localisation/KR_Victory_Points_l_english.yml
@@ -87,6 +87,7 @@ VICTORY_POINTS_1468:0 "Durban"
 VICTORY_POINTS_1488:0 "Chiang Mai"
 VICTORY_POINTS_1492:0 "Mandalay"
 VICTORY_POINTS_1519:0 "Taiyuan"
+VICTORY_POINTS_1536:0 "Shirvan"
 VICTORY_POINTS_1550:0 "Santiago de Cuba"
 VICTORY_POINTS_1562:0 "San Diego"
 VICTORY_POINTS_1563:0 "Pakxe"
