More stuff for Tansamur + fixed elections in UBD

--- a/localisation/KR_Baltic_Duchy_l_english.yml
+++ b/localisation/KR_Baltic_Duchy_l_english.yml
@@ -1,8 +1,8 @@
 ﻿l_english:
 
 ### Opinions ###
-support_spo:0 "Supporting SOP nationalists"
-reb_in_ubd:0 "Disrupting stability in our puppet"
+support_sop:0 "Supporting SOP nationalists"
+reb_in_ubd:0 "Disrupted stability in our puppet"
 accept_help:0 "Germany helped us"
 reject_help:0 "Germany abandoned us"
 german_are_not_expeled:0 "Disobeyed our orders"
